syntax = "proto3";

message NumberDescription {
    MoneySymbol money = 1;
    uint32 scale = 2;
    string symbol = 3;
    bool sign_positive = 4;
    string name = 5;
}
enum MoneySymbol {
    CNY = 0;
    EUR = 1;
    USD = 2;
}
